UTF8 and Integer/Long fixes to the test module